--- a/lexiflux/templates/base.html
+++ b/lexiflux/templates/base.html
@@ -13,6 +13,8 @@
         <link rel="manifest" href="{% static 'site.webmanifest' %}">
         <script src="https://unpkg.com/htmx.org@1.9.6" integrity="sha384-FhXw7b6AlE/jyjlZH5iHa/tTe9EpJ1Y55RjcgPbjeWMskSxZt1v9qkxLJWNJaGni" crossorigin="anonymous"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+
         <style>
             .translation-span {
               display: inline-block;
@@ -38,6 +40,35 @@
             .arrow-indicator {
               text-align: center;
               font-size: 1.2em; /* Adjust the size of the arrow */
+            }
+
+            .info-panel {
+                width: 30%;
+                transition: width 0.3s ease;
+            }
+
+            .info-panel.collapse:not(.show) {
+                display: none !important;
+            }
+
+            @media (max-width: 767.98px) {
+                .flex-md-row {
+                    flex-direction: column !important;
+                }
+
+                .info-panel {
+                    width: 100%;
+                    order: -1;
+                }
+            }
+
+            #collapse-button[aria-expanded="true"] #collapse-icon::before {
+                content: "\F18E";
+                font-family: "Bootstrap Icons";
+            }
+
+            #collapse-button[aria-expanded="false"] #collapse-icon::before {
+                content: "\F18F";
             }
         </style>
     </head>
