no transition delay

--- a/lexiflux/templates/base.html
+++ b/lexiflux/templates/base.html
@@ -33,7 +33,6 @@
             }
 
             .original-text {
-              /* Styling for the original text */
               font-style: italic; /* Optional: italicize the original text */
             }
 
@@ -44,6 +43,7 @@
 
             .info-panel {
                 width: 30%;
+               transition: width 0.0s;
             }
 
             .info-panel.collapse:not(.show) {
