--- a/lexiflux/templates/reader.html
+++ b/lexiflux/templates/reader.html
@@ -1,6 +1,78 @@
 {% extends "base.html" %}
 {% load static %}
 {% block content %}
-    {% include "page.html" %}
+    <div id="reader" class="d-flex flex-column vh-100">
+
+        <nav id="top-navbar" class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                {% include 'hamburger.html' with current_page='reader' %}
+                <div class="text-truncate">
+                    <button class="btn btn-link dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                        {{ book.title }}
+                    </button>
+                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
+                        {% for toc_item in book.toc %}
+                            <li>
+                                <a class="dropdown-item" href="#" onclick="goToPage({{ toc_item.1 }}, {{ toc_item.2 }})">{{ toc_item.0 }}</a>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                    <button id="collapse-button" class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#info-panel" aria-expanded="false" aria-controls="info-panel">
+                        <i id="collapse-icon" class="bi bi-chevron-double-left"></i>
+                    </button>
+                </div>
+            </div>
+        </nav>
+
+        <div class="flex-grow-1 d-flex flex-column flex-md-row  overflow-hidden">
+            <div id="book-page-scroller" class="container-fluid flex-grow-1 overflow-hidden">
+                <div id="words-container">
+                    {{ pageHtml|safe }}
+                </div>
+            </div>
+
+            <div id="info-panel" class="info-panel collapse d-md-block col-6 order-md-last">
+                <div class="card h-100">
+                    <div class="card-header">
+                        <ul class="nav nav-tabs card-header-tabs" id="infoPanelTabs" role="tablist">
+                            <li class="nav-item" role="presentation">
+                                <button class="nav-link active" id="dictionary-tab-1" data-bs-toggle="tab" data-bs-target="#dictionary-panel-1" type="button" role="tab" aria-controls="dictionary-panel-1" aria-selected="true">Dictionary</button>
+                            </li>
+                            <li class="nav-item" role="presentation">
+                                <button class="nav-link" id="explain-tab" data-bs-toggle="tab" data-bs-target="#explain-panel" type="button" role="tab" aria-controls="explain-panel" aria-selected="false">Explain</button>
+                            </li>
+                            <li class="nav-item" role="presentation">
+                                <button class="nav-link" id="examples-tab" data-bs-toggle="tab" data-bs-target="#examples-panel" type="button" role="tab" aria-controls="examples-panel" aria-selected="false">Examples</button>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="tab-content card-body" id="infoPanelContent">
+                        <div class="tab-pane fade show active" id="dictionary-panel-1" role="tabpanel" aria-labelledby="dictionary-tab-1">
+                            Loading...
+                        </div>
+                        <div class="tab-pane fade" id="explain-panel" role="tabpanel" aria-labelledby="explain-tab">
+                            Loading...
+                        </div>
+                        <div class="tab-pane fade" id="examples-panel" role="tabpanel" aria-labelledby="examples-tab">
+                            Loading...
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-between navbar-fixed-bottom">
+            <button class="btn btn-primary" id="prev-button">
+                &#8592; <!-- Left arrow -->
+            </button>
+            <div class="text-truncate">
+                {{ page.number }}
+            </div>
+            <button class="btn btn-primary pull-right" id="next-button">
+                &#8594; <!-- Right arrow -->
+            </button>
+        </nav>
+    </div>
     <script src="{% static 'lexiflux/bundle.js' %}"></script>
 {% endblock %}
+
