fixed test_translate_view_success fixed updating page number

--- a/lexiflux/templates/reader.html
+++ b/lexiflux/templates/reader.html
@@ -65,7 +65,7 @@
             <button class="btn btn-primary" id="prev-button">
                 &#8592; <!-- Left arrow -->
             </button>
-            <div class="text-truncate">
+            <div class="text-truncate" id="page-number">
                 {{ page.number }}
             </div>
             <button class="btn btn-primary pull-right" id="next-button">
