--- a/lexiflux/templates/reader.html
+++ b/lexiflux/templates/reader.html
@@ -52,6 +52,7 @@
                         <div class="tab-pane fade" id="lexical-article-2" role="tabpanel" aria-labelledby="lexical-tab-2">
                         </div>
                         <div class="tab-pane fade" id="lexical-article-3" role="tabpanel" aria-labelledby="lexical-tab-3">
+                            <iframe id="lexical-frame-3" src="" style="width:100%; height:100%; border:none;"></iframe>
                         </div>
                     </div>
                 </div>
