--- a/lexiflux/templates/reader.html
+++ b/lexiflux/templates/reader.html
@@ -48,10 +48,27 @@
                     </div>
                     <div class="tab-content card-body" id="lexicalPanelContent">
                         <div class="tab-pane fade show active" id="lexical-article-1" role="tabpanel" aria-labelledby="lexical-tab-1">
+                            <div id="lexical-content-1" class="lexical-content">
+                                <div class="spinner-border text-primary" role="status">
+                                    <span class="visually-hidden">Loading...</span>
+                                </div>
+                            </div>
+                            <iframe id="lexical-frame-1" src="" style="width:100%; height:100%; border:none;"></iframe>
                         </div>
                         <div class="tab-pane fade" id="lexical-article-2" role="tabpanel" aria-labelledby="lexical-tab-2">
+                            <div id="lexical-content-2" class="lexical-content">
+                                <div class="spinner-border text-primary" role="status">
+                                    <span class="visually-hidden">Loading...</span>
+                                </div>
+                            </div>
+                            <iframe id="lexical-frame-2" src="" style="width:100%; height:100%; border:none;"></iframe>
                         </div>
                         <div class="tab-pane fade" id="lexical-article-3" role="tabpanel" aria-labelledby="lexical-tab-3">
+                            <div id="lexical-content-3" class="lexical-content">
+                                <div class="spinner-border text-primary" role="status">
+                                    <span class="visually-hidden">Loading...</span>
+                                </div>
+                            </div>
                             <iframe id="lexical-frame-3" src="" style="width:100%; height:100%; border:none;"></iframe>
                         </div>
                     </div>
