renamed language editor

--- a/lexiflux/templates/hamburger.html
+++ b/lexiflux/templates/hamburger.html
@@ -3,7 +3,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-    <li><a class="dropdown-item {% if current_page == 'profile' %}text-secondary{% endif %}" href="{% url 'profile' %}">Profile</a></li>
+    <li><a class="dropdown-item {% if current_page == 'profile' %}text-secondary{% endif %}" href="{% url 'profile' %}">Language settings</a></li>
     <li><a class="dropdown-item {% if current_page == 'library' %}text-secondary{% endif %}" href="{% url 'library' %}">Library</a></li>
     <li><a class="dropdown-item {% if current_page == 'reader' %}text-secondary{% endif %}" href="{% url 'reader' %}">Reader</a></li>
   </ul>
