--- a/lexiflux/templates/profile.html
+++ b/lexiflux/templates/profile.html
@@ -6,7 +6,7 @@
         <div class="container-fluid">
             {% include 'hamburger.html' with current_page='profile' %}
             <div class="mx-3 text-truncate container-fluid">
-                Reader Profile
+                Language Settings
             </div>
         </div>
     </nav>
@@ -16,7 +16,7 @@
         <div class="row mb-4">
             <div class="col-md-12">
                 <div class="d-flex align-items-center">
-                    <label for="languageSelect" class="form-label me-3 mb-0 text-nowrap">Profile for:</label>
+                    <label for="languageSelect" class="form-label me-3 mb-0 text-nowrap">For book language:</label>
                     <select id="languageSelect" v-model="currentLanguageId" @change="changeLanguage" class="form-select">
                         <option v-for="language in allLanguages" :value="language.google_code">
                             [[ language.name ]]
